2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bin_add_many binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala:
	* vala/valainterfacewriter.vala:
	* vala/valainvocationexpression.vala:
	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valatokentype.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:

	Support parameter arrays, fixes bug 538897

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valaparser.vala:

	Avoid C compiler warnings with switch statements

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Fix non-struct output arguments in dynamic D-Bus method calls

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaassignment.vala:
	* vala/valabasicblock.vala:
	* vala/valabinaryexpression.vala:
	* vala/valacastexpression.vala:
	* vala/valacatchclause.vala:
	* vala/valacodenode.vala:
	* vala/valadeclarationstatement.vala:
	* vala/valaelementaccess.vala:
	* vala/valaexpressionstatement.vala:
	* vala/valaflowanalyzer.vala:
	* vala/valaforeachstatement.vala:
	* vala/valainvocationexpression.vala:
	* vala/valamemberaccess.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valaparenthesizedexpression.vala:
	* vala/valaphifunction.vala:
	* vala/valapointerindirection.vala:
	* vala/valareferencetransferexpression.vala:
	* vala/valareturnstatement.vala:
	* vala/valathrowstatement.vala:
	* vala/valaunaryexpression.vala:
	* compiler/valacompiler.vala:

	Report use of possibly uninitialized variables, fixes bug 508477
	and bug 556861

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valainterface.vala:
	* vala/valainterfacewriter.vala:
	* vala/valaparser.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala: